@@ -374,6 +374,7 @@ public class GlobalEngine extends AbstractService {
       }
 
       storeNode = new StoreTableNode(plan.newPID(), outputTableName);
+      storeNode.setOptions(new Options());
       queryContext.setOutputPath(outputPath);
 
       if (insertNode.isOverwrite()) {
@@ -388,6 +389,8 @@ public class GlobalEngine extends AbstractService {
       Schema subQueryOutSchema = subQuery.getOutSchema();
 
       if (insertNode.hasTargetTable()) { // if a target table is given, it computes the proper schema.
+        storeNode.getOptions().putAll(insertNode.getTargetTable().getMeta().getOptions());
+
         Schema targetTableSchema = insertNode.getTargetTable().getMeta().getSchema();
         Schema targetProjectedSchema = insertNode.getTargetSchema();
 
@@ -436,7 +439,7 @@ public class GlobalEngine extends AbstractService {
         storeNode.setStorageType(insertNode.getStorageType());
       }
       if (insertNode.hasOptions()) {
-        storeNode.setOptions(insertNode.getOptions());
+        storeNode.getOptions().putAll(insertNode.getOptions());
       }
 
       // find a subquery query of insert node and merge root block and subquery into one query block.
