@@ -150,6 +150,9 @@ Release 0.2.0 - unreleased
 
   BUG FIXES
 
+    TAJO-191: INSERT OVERWRITE INTO statement should follow the table meta in 
+    catalog. (jinho)
+
     TAJO-198: The split function does not work properly. (jinho)
 
     TAJO-187: The exception 'Some targets cannot be evaluated' is caused in 
